<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planning_simulator_launcher</name>
  <version>0.0.1</version>
  <description>The planning_simulator_launcher package</description>

  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <maintainer email="httperror@404-notfound.jp">Tatsuya Yamasaki</maintainer>

  <license>Apache 2</license>
  <exec_depend>scenario_runner</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
